# pns

./: README.md  pyproject.toml
simulations/: PNS Numerical Studies.ipynb
slides/: pns.aux  pns.nav  pns.snm  pns.tex  pns.vrb
slides/_misc_/: DAGs.tex  algo.tex
src/PnsSim/: PnsSim.py
